--- a/src/app/modules/ClassSubject/classsubjectdetail/classsubjectdetail.component.html
+++ b/src/app/modules/ClassSubject/classsubjectdetail/classsubjectdetail.component.html
@@ -82,7 +82,7 @@
                     </mat-form-field>
                 </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="TeacherId">
+            <!-- <ng-container matColumnDef="TeacherId">
                 <mat-header-cell *matHeaderCellDef mat-sort-header>
                     Teacher
                 </mat-header-cell>
@@ -97,7 +97,7 @@
                         </mat-select>
                     </mat-form-field>
                 </mat-cell>
-            </ng-container>
+            </ng-container> -->
             <ng-container matColumnDef="Active">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> Active </mat-header-cell>
                 <mat-cell *matCellDef="let element">
