--- a/src/app/modules/student/studentprogressreport/studentprogressreport.component.html
+++ b/src/app/modules/student/studentprogressreport/studentprogressreport.component.html
@@ -58,16 +58,16 @@
                         <span
                             *ngIf="disCol =='Description' && 
                             element.QuestionnaireType =='Evaluation Master'"
-                            style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:red">
+                            style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:#A4de02">
                             {{element[disCol]}}</span>
                             <span
                             *ngIf="disCol =='Description'
                                 && element.QuestionnaireType=='Heading'"
-                            style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:blue">
+                            style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:#1E5631">
                             {{element[disCol]}}</span>
                             <span
                             *ngIf="disCol =='Description' && element.QuestionnaireType=='Sub Heading'"
-                            style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:green">
+                            style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:#76ba1b">
                             {{element[disCol]}}</span>
                         <span *ngIf="element.QuestionnaireType=='Questionnaire' && disCol =='Description'"
                             style="width: 100%;padding: 15px 15px 10px 0px;">
