--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.scss
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.scss
@@ -10,7 +10,7 @@ mat-form-field{
 .mat-column-Action,
 .mat-column-RollNo,
 .mat-column-ClassName,
-.mat-column-RemarkId,
+.mat-column-Remark,
 .mat-column-SectionId{
     //justify-content: center;
     flex:1 0 100px;
