--- a/src/app/modules/schooltimetable/teacherperiod/teacherperiod.component.scss
+++ b/src/app/modules/schooltimetable/teacherperiod/teacherperiod.component.scss
@@ -1,6 +1,12 @@
 mat-form-field{
     margin-right: 15px;
 }
+mat-cell,mat-header-cell{
+    align-self: stretch;
+    padding: 15px;
+    justify-content: center;
+    border-right: 1px solid lightgray;
+}
 .mat-column-TeacherPeriodId{
     flex:1 1 60px;
 }
