--- a/src/app/modules/evaluation/classevaluationoption/classevaluationoption.component.html
+++ b/src/app/modules/evaluation/classevaluationoption/classevaluationoption.component.html
@@ -69,7 +69,7 @@
             </mat-cell>
         </ng-container>
         <ng-container matColumnDef="Point">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Point
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Points
             </mat-header-cell>
             <mat-cell *matCellDef="let element">
                 <mat-form-field appearance="outline">
