--- a/src/app/modules/studentexam/studentgrade/studentgrade.component.scss
+++ b/src/app/modules/studentexam/studentgrade/studentgrade.component.scss
@@ -5,6 +5,7 @@ mat-form-field{
 .mat-column-StudentGradeId,
 .mat-column-SubjectCategoryId,
 .mat-column-GradeStatusId,
+.mat-column-Points,
 .mat-column-Sequence
 {    
     flex:1 0 100px;
